--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -1,10 +1,12 @@
 {% from "macros.njk" import addDaysAgo, setLanguage, sonarLink, depTrackLink, DepTrackMetrics, dropdownFilter %}
 
 <link rel="stylesheet" href="{{basePath}}/css/tab-services.css">
+{# no need to include the tab's js: "{{basePath}}/js/tab-xxxxx.js" as this is added in main.js #}
+
 
 <div class="tab-container">
   <div class="tab-container-left-col">
-      <!-- Master checkbox to control all .name-checkbox -->
+      <!-- Master checkbox to control all .level1-checkbox -->
       <div class="masterCheckbox">
             <input type="checkbox" id="masterCheckbox-id">
             <label for="masterCheckbox-id"><strong>Select All</strong></label>
@@ -13,12 +15,12 @@
       <form id="filterForm">
          {% for document in documents %}
             <div>
-               <input type="checkbox" id="{{ document.name }}" class="name-checkbox" checked>
-               <label for="{{ document.name }}" class="label-name-checkbox">{{ document.name }}</label>
+               <input type="checkbox" id="{{ document.name }}" class="level1-checkbox" checked>
+               <label for="{{ document.name }}" class="label-level1-checkbox">{{ document.name }}</label>
                <div>
                   {% for version in document.versions %}
-                     <input type="checkbox" id="{{ document.name }}-{{ version.version }}" class="version-checkbox" data-name="{{ document.name }}" checked>
-                     <label for="{{ document.name }}-{{ version.version }}" class="label-version-checkbox">{{ version.version }}</label><br>
+                     <input type="checkbox" id="{{ document.name }}-{{ version.version }}" class="level2-checkbox" data-level1="{{ document.name }}" checked>
+                     <label for="{{ document.name }}-{{ version.version }}" class="label-level2-checkbox">{{ version.version }}</label><br>
                   {% endfor %}
                </div>
             </div>
@@ -102,7 +104,7 @@
          {% for document in documents %}
             <!-- Iterate over each version entry in versions array -->
             {% for version in document.versions %}
-               <tr data-name="{{ document.name }}" data-version="{{ version.version }}">
+               <tr data-level1="{{ document.name }}" data-level2="{{ version.version }}">
                      <!-- 1st Column (link) -->
                      <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
 
