--- a/views/tabs/tab-prodowner.njk
+++ b/views/tabs/tab-prodowner.njk
@@ -1,4 +1,4 @@
-{% from "macros.njk" import addDaysAgo, setLanguage, sonarLink, depTrackLink, DepTrackMetrics, dropdownFilter %}
+{% from "macros.njk" import addDaysAgo, setLanguage, sonarLink, depTrackLink, DepTrackMetrics, setStandardId %}
 
  <div class="tab-container">
   <div class="tab-container-left-col">
@@ -11,13 +11,17 @@
       <form id="filterForm">
          {% for document in documents %}
             <div>
-               <input type="checkbox" id="{{ document._id }}" class="level1-checkbox" checked>
-               <label for="{{ document._id }}" class="label-level1-checkbox">{{ document._id }}</label>
+               {# document._id is the scrum name and can contain invalid chars (at least spaces)
+               so those ids should be standardised before using them #}
+               {% set standardId = setStandardId(document._id) %}
+
+               <input type="checkbox" id="{{ standardId }}" class="level1-checkbox" checked>
+               <label for="{{ standardId }}" class="label-level1-checkbox">{{ document._id }}</label>
                <div>
                {% for service in document.services %}
-                     <input type="checkbox" id="{{ service.name }}" class="level2-checkbox" data-level1="{{ service.name }}" checked>
-                     <label for="{{ service.name }}" class="label-level2-checkbox">{{ service.name }}</label><br>
-                  {% endfor %}
+                  <input type="checkbox" id="{{ standardId }}-{{ service.name }}" class="level2-checkbox" data-level1="{{ standardId }}" checked>
+                  <label for="{{ standardId }}-{{ service.name }}" class="label-level2-checkbox">{{ service.name }}</label><br>
+               {% endfor %}
                </div>
             </div>
          {% endfor %}
@@ -32,126 +36,49 @@
             <tr>
                   <!--  1 --><th class="row-header-title header-service" id="col-head-service" data-type="string"> Service</th>
 
-                  <!--  2 --><th class="row-header-title header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
-                  <!--  3 --><th class="row-header-title header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
-                  <!--  4 --><th class="row-header-title header-git" id="col-head-git-rel-last" data-type="string"> GitHub Release</th>
-                  <!-- 12 --><th class="row-header-title header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
-                  <!-- 13 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
-                  <!-- 14 --><th class="row-header-title header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
-
-                  <!--  5 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Sonar</span></th>
-                  <!-- 15 --><th class="row-header-title header-deptrack"  id="col-head-deptk-date" data-type="date"  >Dep Track</th>
+                  {# <!--  2 --><th class="row-header-title header-git" id="col-head-git-owner"    data-type="string"> Owner</th> #}
+                  <!--  3 --><th class="row-header-title header-git" id="col-head-git-rel-last" data-type="string"> GitHub Release</th>
+                  <!--  4 --><th class="row-header-title header-ecs" id="col-head-ecs-cidev"    data-type="string"><span>cidev</span></th>
+                  <!--  5 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"     data-type="string"><span>staging</span></th>
+                  <!--  6 --><th class="row-header-title header-ecs" id="col-head-ecs-live"     data-type="string"><span>live</span></th>
+                  <!--  7 --><th class="row-header-title header-git" id="col-head-git-lang"     data-type="string">Runtime</th>
+                  <!--  8 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Sonar</span></th>
+                  <!--  9 --><th class="row-header-title header-deptrack"     id="col-head-deptk-date"     data-type="number">Dep Track</th>
             </tr>
          </thead>
          <tbody>
-
-            {# <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
-                     <td class="td-git-owner">     <a href="{{ document.gitInfo.repo }}/custom-properties">{{ document.gitInfo.owner }}</a></td>
-
-            <td class="td-git-version">   <a href="{{ document.gitInfo.repo }}/releases">         {% for release in document.gitInfo.releases %}   <li>{{ release.version }}</li> {% endfor %} </a></td>
-            <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.releases[0].date | date("YYYY-MM-DD") }}</a></span>{{addDaysAgo( document.gitInfo.releases[0].date ) }}</td>
-
-            <td class="td-ecs"> {% for version in document.ecs.cidev %}   <li>{{ version }}</li> {% endfor %} </td>
-            <td class="td-ecs"> {% for version in document.ecs.staging %} <li>{{ version }}</li> {% endfor %} </td>
-            <td class="td-ecs"> {% for version in document.ecs.live %}    <li>{{ version }}</li> {% endfor %} </td>
-
-            <td class="td-runtime">
-               {% if version.runtime.length > 1 %}
-                  <ul class="td-runtime-info"> {% for info in version.runtime %} <li>{{ info }}</li> {% endfor %} </ul>
-               {% else %}
-                  {{ version.runtime[0] }}
-               {% endif %}
-            </td>
-
-                     <!-- 4 Columns (sonar Metrics) -->
-                     <td class="td-met-coverage">       {{ sonarLink(document.sonarKey, document.sonarMetrics.coverage) }}</td>
-                     <td class="td-met-bugs">           {{ sonarLink(document.sonarKey, document.sonarMetrics.bugs) }}</td>
-                     <td class="td-met-smells">         {{ sonarLink(document.sonarKey, document.sonarMetrics.code_smells) }}</td>
-                     <td class="td-met-vulnerabilities">{{ sonarLink(document.sonarKey, document.sonarMetrics.vulnerabilities) }}</td>
-
-                     <td class="td-critical">
-                        {{DepTrackMetrics(version.metrics.critical, "critical", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-high">
-                        {{DepTrackMetrics(version.metrics.high, "high", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-medium">
-                        {{DepTrackMetrics(version.metrics.medium, "medium", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-low">
-                        {{DepTrackMetrics(version.metrics.low, "low", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-vulnerabilities">
-                        {{DepTrackMetrics(version.metrics.vulnerabilities, "vulnerabilities", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-components">
-                        {{DepTrackMetrics(version.metrics.components, "components", version.uuid, "components")}}
-                     </td>
-
-
-
-
-
-
-
-
-
-         {% for document in documents %}
-            <!-- Iterate over each version entry in versions array -->
-            {% for version in document.versions %}
-               <tr data-level1="{{ document.name }}" data-level2="{{ version.version }}">
-                     <!-- 1st Column (link) -->
-                     <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
-
-                     <!-- 4 Columns (Git info)-->
-                     <td class="td-git-owner">     <a href="{{ document.gitInfo.repo }}/custom-properties">{{ document.gitInfo.owner }}</a></td>
-                     <td class="td-git-lang">      {{setLanguage(version.lang, document.gitInfo.lang, document.gitInfo.repo) }}</td>
-                     <td class="td-git-version">   <a href="{{ document.gitInfo.repo }}/releases">         {% for release in document.gitInfo.releases %}   <li>{{ release.version }}</li> {% endfor %} </a></td>
-                     <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.releases[0].date | date("YYYY-MM-DD") }}</a></span>{{addDaysAgo( document.gitInfo.releases[0].date ) }}</td>
-
-                     <!-- 4 Columns (sonar Metrics) -->
-                     <td class="td-met-coverage">       {{ sonarLink(document.sonarKey, document.sonarMetrics.coverage) }}</td>
-                     <td class="td-met-bugs">           {{ sonarLink(document.sonarKey, document.sonarMetrics.bugs) }}</td>
-                     <td class="td-met-smells">         {{ sonarLink(document.sonarKey, document.sonarMetrics.code_smells) }}</td>
-                     <td class="td-met-vulnerabilities">{{ sonarLink(document.sonarKey, document.sonarMetrics.vulnerabilities) }}</td>
-
-                     <!-- 2 Columns Version & Runtime-->
-                     <td class="td-version">{{ version.version }}</td>
-                     <td class="td-runtime">
-                        {% if version.runtime.length > 1 %}
-                           <ul class="td-runtime-info"> {% for info in version.runtime %} <li>{{ info }}</li> {% endfor %} </ul>
-                        {% else %}
-                           {{ version.runtime[0] }}
-                        {% endif %}
-
-                     <!-- 3 Columns ECS -->
-                     <td class="td-ecs"> {% for version in document.ecs.cidev %}   <li>{{ version }}</li> {% endfor %} </td>
-                     <td class="td-ecs"> {% for version in document.ecs.staging %} <li>{{ version }}</li> {% endfor %} </td>
-                     <td class="td-ecs"> {% for version in document.ecs.live %}    <li>{{ version }}</li> {% endfor %} </td>
-
-                     <!-- 7 Columns Dep Track (Version specific) -->
-                     <td class="td-bom-import"><span>{{ depTrackLink(version.lastBomImport | date("YYYY-MM-DD"), version.uuid) }}</span>{{addDaysAgo( version.lastBomImport ) }}</td>
-                     <td class="td-critical">
-                        {{DepTrackMetrics(version.metrics.critical, "critical", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-high">
-                        {{DepTrackMetrics(version.metrics.high, "high", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-medium">
-                        {{DepTrackMetrics(version.metrics.medium, "medium", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-low">
-                        {{DepTrackMetrics(version.metrics.low, "low", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-vulnerabilities">
-                        {{DepTrackMetrics(version.metrics.vulnerabilities, "vulnerabilities", version.uuid)}}
-                     </td>
-                     <td class="td-deptrack-components">
-                        {{DepTrackMetrics(version.metrics.components, "components", version.uuid, "components")}}
-                     </td>
-            </tr>
+            {% for document in documents %}
+               {% for service in document.services %}
+                  <tr data-level1="{{ setStandardId(document._id) }}" data-level2="{{ service.name }}">
+                        <td class="td-name">          <a href="{{ service.gitInfo.repo }}">{{ service.name }}</a></td>
+                        {# <td class="td-git-owner">     <a href="{{ service.gitInfo.repo }}/custom-properties">{{ service.gitInfo.owner }}</a></td> #}
+                        <td class="td-git-version">   {% for release in service.gitInfo.releases %} <li><a href="{{ service.gitInfo.repo }}/releases">{{ release.version }}</a></li> {% endfor %}</td>
+                        <td class="td-ecs"> {% for version in service.ecs.cidev %} <li>{{ version }}</li> {% endfor %} </td>
+                        <td class="td-ecs"> {{ service.ecs.staging }} </td>
+                        <td class="td-ecs"> {{ service.ecs.live }} </td>
+                        {# <td class="td-git-lang">      {{setLanguage(service.latestVersion.lang, service.gitInfo.lang, service.gitInfo.repo) }}</td> #}
+                        <td class="td-runtime">
+                           {% if service.latestVersion.runtime.length > 1 %}
+                              <ul class="td-runtime-info"> {% for info in service.latestVersion.runtime %} <li>{{ info }}</li> {% endfor %} </ul>
+                           {% else %}
+                              {{ service.latestVersion.runtime[0] }}
+                           {% endif %}
+                        </td>
+                        <td class="td-sonar-metrics">
+                           {{ sonarLink(sonarUri, service.sonarKey, service.sonarMetrics.bugs) }}
+                           {{ sonarLink(sonarUri, service.sonarKey, service.sonarMetrics.code_smells) }}
+                           {{ sonarLink(sonarUri, service.sonarKey, service.sonarMetrics.vulnerabilities) }}
+                        </td>
+                        <td class="td-deptrack-metrics">
+                           {{DepTrackMetrics(depTrackUri, service.latestVersion.metrics.critical, "critical", service.latestVersion.uuid)}}
+                           {{DepTrackMetrics(depTrackUri, service.latestVersion.metrics.high, "high", service.latestVersion.uuid)}}
+                           {{DepTrackMetrics(depTrackUri, service.latestVersion.metrics.medium, "medium", service.latestVersion.uuid)}}
+                           {{DepTrackMetrics(depTrackUri, service.latestVersion.metrics.low, "low", service.latestVersion.uuid)}}
+                           {{DepTrackMetrics(depTrackUri, service.latestVersion.metrics.vulnerabilities, "vulnerabilities", service.latestVersion.uuid)}}
+                        </td>
+                  </tr>
+               {% endfor %}
             {% endfor %}
-         {% endfor %} #}
          </tbody>
     </table>
   </div>
