--- a/public/css/tab-prodowner.css
+++ b/public/css/tab-prodowner.css
@@ -136,7 +136,7 @@
 .td-runtime-info-red {
   color: red;
 }
-.td-runtime-info-orange {
+.td-runtime-info-yellow {
   color: orange;
 }
 .td-runtime-info-green {
