--- a/views/macros.njk
+++ b/views/macros.njk
@@ -23,11 +23,13 @@
 {% endmacro %}
 
 {% macro sonarLink(sonarUri, sonarKey, val) %}
+   <div class="front-number" >
     {% if sonarKey %}
         <a class="sonar-link" href="{{ sonarUri }}/dashboard?id={{ sonarKey | urlencode }}">{{val}}</a>
     {% else %}
         {{ val }}
     {% endif %}
+   </div>
 {% endmacro %}
 
 {% macro depTrackLink(depTrackUri, metricVal, uuid, arg) %}
