--- a/views/tabs/tab-prodowner.njk
+++ b/views/tabs/tab-prodowner.njk
@@ -5,6 +5,19 @@
   <li class="{{ colorClass }}">{{ item }}</li>
 {% endmacro %}
 
+{% macro addColorClass(color) %}
+    {% if color == 'green' %}
+        runtime_green_row
+    {% elif color == 'yellow' %}
+        runtime_yellow_row
+    {% elif color == 'red' %}
+        runtime_red_row
+    {% else %}
+        ''
+    {% endif %}
+{% endmacro %}
+
+
  <div class="tab-container">
   <div class="tab-container-left-col">
       <!-- Master checkbox to control all .level1-checkbox -->
@@ -54,16 +67,18 @@
          <tbody>
             {% for document in documents %}
                {% for service in document.services %}
-                  <tr data-level1="{{ setStandardId(document._id) }}" data-level2="{{ service.name }}">
+                  {% set totalRuntimeColor = service.latestVersion.runtime.total %}
+
+                  <tr class="transparent_row" data-level1="{{ setStandardId(document._id) }}" data-level2="{{ service.name }}">
                         <td class="td-name">          <a href="{{ service.gitInfo.repo }}">{{ service.name }}</a></td>
                         {# <td class="td-git-owner">     <a href="{{ service.gitInfo.repo }}/custom-properties">{{ service.gitInfo.owner }}</a></td> #}
-                        <td class="td-git-version">
+                        <td class="td-git-version {{ addColorClass(totalRuntimeColor) }}">
                            <div><u><a href="{{ service.gitInfo.repo }}/releases">{{ service.gitInfo.releases[0].date | date("YYYY-MM-DD") }}</a></u></div>
                            {% for release in service.gitInfo.releases %} <li><a href="{{ service.gitInfo.repo }}/releases">{{ release.version }}</a></li> {% endfor %}
                         </td>
-                        <td class="td-ecs"> {% for version in service.ecs.cidev %} <li>{{ version }}</li> {% endfor %} </td>
-                        <td class="td-ecs"> {{ service.ecs.staging }} </td>
-                        <td class="td-ecs"> {{ service.ecs.live }} </td>
+                        <td class="td-ecs {{ addColorClass(totalRuntimeColor) }}"> {% for version in service.ecs.cidev %} <li>{{ version }}</li> {% endfor %} </td>
+                        <td class="td-ecs {{ addColorClass(totalRuntimeColor) }}"> {{ service.ecs.staging }} </td>
+                        <td class="td-ecs {{ addColorClass(totalRuntimeColor) }}"> {{ service.ecs.live }} </td>
                         {# <td class="td-git-lang">      {{setLanguage(service.latestVersion.lang, service.gitInfo.lang, service.gitInfo.repo) }}</td> #}
                         <td class="td-runtime">
                            <ul class="td-runtime-info"> {% for info in service.latestVersion.runtime.runtime %}  {{ colorRuntimeItem(info.value, info.color) }} {% endfor %} </ul>
