--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -1,16 +1,5 @@
 {% from "macros.njk" import addDaysAgo, setLanguage, sonarLink, depTrackLink, DepTrackMetrics, dropdownFilter %}
 
-{% macro addSonarClass0(val, class) %}
-    {% if val and val != 0 %}
-      rounded-number sr-metric-{{ class }}-back
-    {% else %}
-      front-number sr-metric-{{ class }}-front
-    {% endif %}
-{% endmacro %}
-{% macro addSonarClass(val, class) %}
-{% endmacro %}
-
-
 <div class="tab-container">
   <div class="tab-container-left-col">
       <!-- Master checkbox to control all .level1-checkbox -->
@@ -122,10 +111,10 @@
                      <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.releases[0].date | date("YYYY-MM-DD") }}</a></span>{{addDaysAgo( document.gitInfo.releases[0].date ) }}</td>
 
                      <!-- 4 Columns (sonar Metrics) -->
-                     <td class="td-sonar-metrics {{addSonarClass(document.sonarMetrics.coverage, 'coverage')}}">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.coverage, "coverage") }}</td>
-                     <td class="td-sonar-metrics {{addSonarClass(document.sonarMetrics.bugs, 'bugs')}}">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.bugs, "bugs") }}</td>
-                     <td class="td-sonar-metrics {{addSonarClass(document.sonarMetrics.code_smells, 'code_smells')}}">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.code_smells, "code smells") }}</td>
-                     <td class="td-sonar-metrics {{addSonarClass(document.sonarMetrics.vulnerabilities, 'vulnerabilities')}}">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.vulnerabilities, "vulnerabilities") }}</td>
+                     <td class="td-sonar-metrics">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.coverage, "coverage") }}</td>
+                     <td class="td-sonar-metrics">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.bugs, "bugs") }}</td>
+                     <td class="td-sonar-metrics">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.code_smells, "code smells") }}</td>
+                     <td class="td-sonar-metrics">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.vulnerabilities, "vulnerabilities") }}</td>
 
                      <!-- 2 Columns Version & Runtime-->
                      <td class="td-version">{{ version.version }}</td>
